Fix padding at the bottom of the web page: remove position relative to ParallaxBanner component remove position absolute from Grid item/welcome header and set z-index 5 change MainContainer Paper component position from absolute to relative add padding-bottom 100px to html element

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  padding-bottom: 100px;
+}
+
 body {
   margin: 0;
 }
